--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"# XPlot Node Library (npm)\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
@@ -21,7 +21,10 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^28.1.2",
+    "jest": "^28.1.1",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.7.3"
